# trading-runtime

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  dev.Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/argo-launchers/: run-backtest.yaml  run-build.yaml
.github/workflows/: argo-build-and-backtest.yaml  deploy_argo_template.yaml  tests.yaml
argo/: run-backtest.yaml  run-build.yaml  workflowtemplate-backtest-fanout.yaml  workflowtemplate-backtest.yaml  workflowtemplate-build-push-ghcr.yaml
argo/templates/: workflowtemplate-backtest-fanout.yaml  workflowtemplate-build-push-ghcr.yaml
core_runtime/argo/: argo.json
core_runtime/backtest/: strategy_api.py
core_runtime/core/: __init__.py
core_runtime/local/: backtest.py  bt_config_local.json  local.json  oci.config.example
core_runtime/strategies/: debug_strategy.py
docs/: venue-adapter-abstraction-design-v1.md
examples/argo/: argo.json
examples/local/: backtest.py  local.json
examples/strategies/: debug_strategy.py
scripts/: check.sh  compile-requirements.sh  post-create.sh
tests/: conftest.py  test_dummy.py
tests/runtime/: test_adapter_boundary_guards.py  test_core_configuration_mapper.py  test_debug_strategy_state_api_compat.py  test_event_stream_cursor.py  test_hftbacktest_execution_adapter_characterization.py  test_hftbacktest_execution_feedback_probe.py  test_hftbacktest_venue_adapter_recording.py  test_import_compatibility_shim.py  test_runtime_core_configuration_integration.py  test_strategy_runner_canonical_market_adoption.py
trading_runtime/argo/: argo.json
(+53 files in other folders)
